--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 <body>
     <dialog id="result"></dialog>
     <div class="maindiv crt">
-        <h1>Lethal Company Moon Picker</h1>
-        <p>reference<br /> skull &#9760; radioactive &#9762; biohazard &#9763; smiley &#9786; frown &#9785; warning &#9888; check &#9745; radioactive &#9762; biohazard &#9763;</p>
+        <h1>FORTUNE-9 OS Route Calculator</h1>
+        <p>Press 'Generate Moons' to calculate the optimum route for your crew.<br />The Company wishes you luck.<br /> skull &#9760; radioactive &#9762; biohazard &#9763; smiley &#9786; frown &#9785; warning &#9888; check &#9745; radioactive &#9762; biohazard &#9763;</p>
+        <p id="calculating">STATUS: Awaiting input...</p>
+        <button type="button" id="submit">Generate Moons</button>
         <p id="randomEvent"></p>
-        <form>
-            <button type="button" id="submit">New moons!</button>
-        </form>
         <div class="moonList" id="easyMoons"></div>
         <div class="moonList" id="intermediateMoons"></div>
-        <div class="moonList" id="hardMoons">&#128127; hard moons</div>
+        <div class="moonList" id="hardMoons"></div>
         <div class="moonList" id="insurmountableMoons"></div>
     </div>
 </body>
