oops i forgot to remove emoji

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <dialog id="result"></dialog>
     <div class="maindiv crt">
         <h1>FORTUNE-9 OS Route Calculator</h1>
-        <p>Press 'Generate Moons' to calculate the optimum route for your crew.<br />The Company wishes you luck.<br /> skull &#9760; radioactive &#9762; biohazard &#9763; smiley &#9786; frown &#9785; warning &#9888; check &#9745; radioactive &#9762; biohazard &#9763;</p>
+        <p>Press 'Generate Moons' to calculate the optimum route for your crew.<br />The Company wishes you luck.<br /></p>
         <p id="calculating">STATUS: Awaiting input...</p>
         <button type="button" id="submit">Generate Moons</button>
         <p id="randomEvent"></p>
